--- a/app/views/presentation/index.html.erb
+++ b/app/views/presentation/index.html.erb
@@ -95,9 +95,9 @@
 
     </div>
 
-  <audio autobuffer src="/antwort.wav" preload="auto" id="answer_audio" style="display: none;">
+  <audio autobuffer src="/answer_audio.wav" preload="auto" id="answer_audio" style="display: none;">
   </audio>
-  <audio autobuffer src="/bling2.wav" preload="auto" id="points_audio" style="display: none;">
+  <audio autobuffer src="/points_audio.wav" preload="auto" id="points_audio" style="display: none;">
   </audio>
   <audio autobuffer src="/zonk.wav" preload="auto" id="zonk_audio" style="display: none;">
   </audio>
