--- a/app/views/presentation/_starting.html.erb
+++ b/app/views/presentation/_starting.html.erb
@@ -1,3 +1,3 @@
-<center style="padding-top: 180px; margin-top: 0px;">
+<center style="padding-top: 80px; margin-top: 0px; margin-right: 0px; margin-left: -8px; padding-right: 0px">
   <%= image_tag "logo.png" %>
 </center>
